@@ -1,3 +1,13 @@
+1998-05-06  Marcus G. Daniels  <mgd@ute.santafe.edu>
+
+	* objectbase.h: Spacing changes in method declarations throughout.
+	(ProbeConfig, DefaultProbeMap): Add description string.
+	(CompleteProbeMap): Add phase tags.
+
+	* CustomProbeMap.m: Add phase tags.
+	
+	* CustomProbeMap.[hm]: Reformatting throughout.
+
 1998-04-29  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* Makefile (version.h): Extract SWARM_{MAJOR,MINOR,SUBMINOR} from
